--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ log = "0.4.14"
 env_logger = "0.9.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+clap = "2.33.0"
+
+[profile.release]
+opt-level = "z"
+lto = true
