--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ serde_json = "1.0"
 clap = "2.33.0"
 once_cell = "1.8.0"
 
+#test-only dependencies
+rand = "0.8.4"
+
 [profile.release]
 opt-level = "z"
 lto = true
