--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = "2.33.0"
 once_cell = "1.8.0"
+lazy_static = "1.4.0"
 
 #test-only dependencies
 rand = "0.8.4"
