--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0"
 clap = "2.33.0"
 once_cell = "1.8.0"
 lazy_static = "1.4.0"
+reqwest = { version = "0.11.7", features = ["blocking"] }
 
 #test-only dependencies
 rand = "0.8.4"
