--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ clap = "2.33.0"
 once_cell = "1.8.0"
 lazy_static = "1.4.0"
 reqwest = { version = "0.11.7", features = ["blocking"] }
+crc32fast = "1.3.0"
 
 #test-only dependencies
 rand = "0.8.4"
