--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "skip-build"
+path = "src/skip-build/main.rs"
+
 [dependencies]
 thiserror = "1.0.30"
 log = "0.4.14"
